--- a/scss/styles.css
+++ b/scss/styles.css
@@ -229,6 +229,36 @@ body {
 }
 
 
+/*------------------------------ FOR END OF QUIZ ---------------------------*/
+
+#end{
+    display: flex;
+    flex-direction: column; /*keeps all features and content on top of eachother*/
+    background-color: #171c22;
+    justify-content:center; /*keep items in center*/
+    align-items:center; /*keep items in center*/    
+}
+
+#end h1 {
+    text-align: center;
+    padding-top: 20%;
+    padding-bottom: 10px;
+    margin-bottom: 0px;
+    margin-top: 0;
+    color: #DFD0B8; 
+    font-family: monospace;
+    font-size: clamp(2rem, calc(3vw + 1vh), 5rem); /*dynamically change font size*/
+}
+
+#end p {
+    text-align: center;
+    padding-bottom: 20px;
+    margin-bottom: 0px;
+    margin-top: 0;
+    color: #777777; 
+    font-family: monospace;
+    font-size: clamp(1vw, calc(3vw + 1vh), 2rem); /*dynamically change font size*/
+}
 
 
 /*------------------------- FOR RESTART BUTTON ---------------------------------*/
